Fri Dec 17 13:46:31 PST 2004  avuton@gmail.com
  * Fix find'ing/sorting

Fri Dec 17 12:30:25 PST 2004  avuton@gmail.com
  * tag/file separation & printMusicTable() rewrite completion
  
  This concludes about 2 weeks of work to get printMusicTable whipped into a shape that I can deal with, that should be able to be better used with the stream() feature and future features. This also simplifies some things that were being done in one function are being done in two now, with minimal code duplication, but it really is necessary for both simplifications purpose and for completely correct sorting.
  
  There are for sure a few bugs here, I know, for example, that there are no anchors in the displayDirectory. This should be rectified very soon, I need to get this out due mostly to major issues with the old trunk.

Mon Nov 19 09:18:46 PST 2007  avuton@gmail.com
  * Breaking down lsinfo2musicTable: Snapshot 2
  
  This prints most of the information we split up before, it's not perfect at the moment, but it's getting better. I expect maybe one more snapshot and we'll be ready to commit.

Thu Dec 16 03:00:20 PST 2004  avuton@gmail.com
  * Breaking down lsinfo2musicTable: Snapshot 1
  The idea right now is to break down lsinfo2musicTable() to different smaller functions, to better handle separations so that sort works as it should. This will also include a need to re(re)write printMusicTable.

Wed Dec 15 07:09:45 PST 2004  avuton@gmail.com
  * lsinfo2musicTable() & printMusicTable() tag/file separation snapshot 11

Wed Dec 15 06:53:12 PST 2004  avuton@gmail.com
  * lsinfo2musicTable() & printMusicTable() snapshot 10
  This pretty much prepares things for the big time svn commit. Lots of cleanups and things seem to be working fairly well, although much testing is needed. Probably still a couple of records away from commit.

Tue Dec 14 05:53:52 PST 2004  avuton@gmail.com
  * lsinfo2musicTable() & printMusicTable() tag/file separation: snapshot 9
  
  This is small, just a sync